# my-portfolio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  app.js  index.html  main.py  package-lock.json  styles.css
public/: robots.txt
src/: lib.rs
src/app/: globals.css
src/app/about/: page.tsx
src/components/: animated-background.tsx  mod.rs
src/components/dock/: dock.rs  dock_item.rs  mod.rs
src/components/menu_bar/: clock.rs  dropdown.rs  menu_bar.rs  mod.rs  status_icons.rs
src/components/mobile/: app_container.rs  home_screen.rs  mod.rs  portfolio.rs  status_bar.rs
src/components/notifications/: mod.rs  notifications.rs
src/components/radial-menu/: index.tsx
src/components/sections/: contact.tsx  hero.tsx
src/components/social/: social-media-icons.tsx
src/components/spotlight/: mod.rs  spotlight.rs
src/components/startup/: mod.rs  startup.rs
src/components/ui/: ElasticCursor.tsx
src/components/windows/: about.rs  contact.rs  finder.rs  imgfile.rs  mod.rs  photos.rs  resume.rs  safari.rs  terminal.rs  txtfile.rs  window.rs  window_controls.rs
src/data/: config.ts  constants.ts  dock_apps.rs  gallery.rs  locations.rs  mod.rs  photos_links.rs  projects.tsx  socials.rs  tech_stack.rs
src/hooks/: mod.rs  use-sounds.ts  use_animation_frame.rs  use_battery.rs  use_clock.rs  use_draggable.rs  use_keyboard.rs  use_mobile.rs  use_network.rs  use_scroll.rs
src/state/: app_state.rs  mod.rs  navigation_state.rs  notification_state.rs  window_state.rs
